[package]
name = "uniswap-routing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = { version = "0.3.0", features = ["serde"] }
graphql_client = { version = "0.12.0", features = ["reqwest"] }
num-bigint = { version = "0.3", features = ["serde"] }
petgraph = "0.6.3"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
