[package]
name = "uniswap-routing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-graphql = "5.0.5"
async-graphql-axum = "5.0.5"
axum = { version = "0.6.4", features = ["headers"] }
bigdecimal = { version = "0.3.0", features = ["serde"] }
env_logger = "0.10.0"
graphql_client = { version = "0.12.0", features = ["reqwest"] }
num-bigint = { version = "0.3", features = ["serde"] }
parking_lot = "0.12.1"
petgraph = "0.6.3"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.2"
